Minor revision of the tutorial file.

--- a/scripts/tutorial.ipynb
+++ b/scripts/tutorial.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,13 +163,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed for compiling gene mutations: 1.66 seconds\n",
+      "Total number of samples processed: 22\n",
+      "Gene mutation summary has been written to /Users/linyusheng/MugGWAS/data/gene_mutation_summary.txt.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## Compile the gene mutations for each sample\n",
     "# if you want to output binary mutation types (mutated or not), set model = 'binary'\n",
-    "gene_mutation_summary = compile_gene_mutations(annovar_output_dir, gff_file, model = 'binary')\n",
+    "gene_mutation_summary = compile_gene_mutations(annovar_output_dir, gff_file, model = 'multiple')\n",
     "## Write the gene mutation summary\n",
     "write_gene_mutation_summary(gene_mutation_summary, output_file)"
    ]
