include data and scripts for distribution

--- a/MugGWAS/tutorials/tutorial.ipynb
+++ b/MugGWAS/tutorials/tutorial.ipynb
@@ -99,19 +99,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'muggwas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmuggwas\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#from MugGWAS import run_annovar\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#from annotate_variants import run_annovar\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m## User inputs\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# path to the annovar directory\u001b[39;00m\n\u001b[1;32m      7\u001b[0m annovar_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/linyusheng/MugGWAS/MugGWAS/scripts/annovar/\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'muggwas'"
+     ]
+    }
+   ],
    "source": [
-    "from annotate_variants import run_annovar\n",
+    "import muggwas\n",
+    "#from MugGWAS import run_annovar\n",
+    "#from annotate_variants import run_annovar\n",
     "\n",
     "## User inputs\n",
     "# path to the annovar directory\n",
-    "annovar_dir = '/Users/linyusheng/MugGWAS/scripts/annovar/'\n",
+    "annovar_dir = '/Users/linyusheng/MugGWAS/MugGWAS/scripts/annovar/'\n",
     "# the directory where the reference files are located\n",
-    "db_dir = '/Users/linyusheng/MugGWAS/data/LE18_22/'\n",
+    "db_dir = '/Users/linyusheng/MugGWAS/MugGWAS/data/LE18_22/'\n",
     "# path to the vcf file\n",
-    "input_dir = '/Users/linyusheng/MugGWAS/data/graz_LE.snp.vcf'\n",
+    "input_dir = '/Users/linyusheng/MugGWAS/MugGWAS/data/graz_LE.snp.vcf'\n",
     "# output prefix or the converted annovar input file\n",
     "vcf_prefix = 'graz_LE'\n",
     "# output prefix for the annovar database\n",
